// 当前工程使用 Minecraft 1.20.1 Forge 47.4.23 的最小构建配置。
plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = project.mod_version
group = project.mod_group_id

base { archivesName = project.mod_id }

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: project.mapping_channel, version: project.mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${project.mod_id}" { source sourceSets.main }
            }
        }
        client { property 'forge.enabledGameTestNamespaces', project.mod_id }
        server { args '--nogui' }
        gameTestServer { property 'forge.enabledGameTestNamespaces', project.mod_id }
        data {
            workingDirectory project.file('run-data')
            args '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    // CurseMaven 提供已核对的 1.20.1 Forge 依赖构件。
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
        content { includeGroup 'curse.maven' }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
    // Tom's Storage 1.20.1 Forge 的正式构件，整理功能直接使用其合并库存能力。
    implementation fg.deobf("curse.maven:toms-storage-378609:${project.toms_storage_curse_file}")
    // Sophisticated 仅用于编译和本地兼容回归；实际整理逻辑仍保持可选兼容。
    compileOnly fg.deobf("curse.maven:sophisticated-core-618298:${project.sophisticated_core_curse_file}")
}

// 将模板变量展开到 Forge 的 mods.toml。
tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version: project.minecraft_version,
            minecraft_version_range: project.minecraft_version_range,
            forge_version: project.forge_version,
            forge_version_range: project.forge_version_range,
            loader_version_range: project.loader_version_range,
            mod_id: project.mod_id,
            mod_name: project.mod_name,
            mod_license: project.mod_license,
            mod_version: project.mod_version,
            mod_authors: project.mod_authors,
            mod_description: project.mod_description,
            toms_storage_version_range: project.toms_storage_version_range
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml']) { expand replaceProperties + [project: project] }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title': project.mod_id,
                'Specification-Vendor': project.mod_authors,
                'Specification-Version': '1',
                'Implementation-Title': project.name,
                'Implementation-Version': project.jar.archiveVersion,
                'Implementation-Vendor': project.mod_authors
        ])
    }
    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) { artifact jar }
    }
    repositories {
        maven { url = "file://${project.projectDir}/mcmodsrepo" }
    }
}

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
